--- a/apps/frontend/src/styles/screens/_game.scss
+++ b/apps/frontend/src/styles/screens/_game.scss
@@ -89,7 +89,7 @@
       margin: 32px 0;
     }
 
-    .card.action .list-item {
+    .list-item {
       min-height: 32px;
       font-size: 16px;
       display: flex;
